--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <title>Atkins HS Varsity Baseball</title>
     <style>
@@ -54,7 +53,7 @@
 
 <body>
     <div class="container">
-        <img src="./ahscamellogo.png" alt="Atkins Camel Logo">
+      <!--  <img src="./ahscamellogo.png" alt="Atkins Camel Logo">  -->
         <div class="content">
             <header>
                 <h1>Atkins HS Baseball Website</h1>
@@ -102,7 +101,7 @@
                 <p></p>
             </footer>
         </div>
-        <img src="./coachmay.jpg" alt="cool image">
+    <!--    <img src="./coachmay.jpg" alt="cool image">  -->
     </div>
 </body>
 </html>
