--- a/thedesert.html
+++ b/thedesert.html
@@ -53,7 +53,7 @@
 
 <body>
     <div class="container">
-        <img src="./ahscamellogo.png" alt="Atkins Camel Logo">
+    <!--    <img src="./ahscamellogo.png" alt="Atkins Camel Logo">   -->
         <div class="content">
             <header>
                 <h1><i>The Desert</i></h1>
@@ -90,7 +90,7 @@
                 <p></p>
             </footer>
         </div>
-        <img src="./coachmay.jpg" alt="cool image">
+  <!--      <img src="./coachmay.jpg" alt="cool image">   -->
     </div>
 </body>
 </html>
