--- a/news.html
+++ b/news.html
@@ -76,6 +76,7 @@
         <section id="section1">
             <h1><b>Come back in February for the latest news from <i>The Desert</i>...</b></h1>
 			<p>
+				<img src="./ahscamellogo.png" alt="Atkins Camel Logo">
 			</p>
             </main>
             <footer>
