--- a/thedesert.html
+++ b/thedesert.html
@@ -76,7 +76,7 @@
         <section id="section1">
             <h2>Our home field advantage: <i>The Desert</i></h2>
             <p>
-			Located at <a href="https://www.google.com/maps/place/Atkins+High+School,+Old+Greensboro+Rd,+Winston+Salem,+NC/">8965 Old Greensboro Road</a>
+			Located at <a href="https://www.google.com/maps/place/Simon+G.+Atkins+Academic+%26+Technology+High+School/">3605 Old Greensboro Road</a>
 			, Joe Childress Memorial Baseball Field, nicknamed "<i>The Desert</i>" by the camel faithful, has been the home of the Atkins Fighting Camels since the 2006 season!. <br>
 			In its storied 18 seasons <i>The Desert</i> has seen over 160 varsity baseball games! It's nickname was coined by the class of 2023 seniors Angelo, Marcello, and Andre. <br>
 			The class of 2023 felt the nickname fit because "In <i>The Desert</i> we play hard, we play fair, and we make every pitch count. It is a tough place to be the visiting team."<br>
