--- a/thedesert.html
+++ b/thedesert.html
@@ -78,7 +78,7 @@
             <p>
 			Located at <a href="https://www.google.com/maps/place/Simon+G.+Atkins+Academic+%26+Technology+High+School/">3605 Old Greensboro Road</a>
 			, Joe Childress Memorial Baseball Field, nicknamed "<i>The Desert</i>" by the camel faithful, has been the home of the Atkins Fighting Camels since the 2006 season!. <br>
-			In its storied 18 seasons <i>The Desert</i> has seen over 160 varsity baseball games! It's nickname was coined by the class of 2023 seniors Angelo, Marcello, and Andre. <br>
+			In its storied 18 seasons <i>The Desert</i> has seen over 160 varsity baseball games! It's nickname was coined by the class of 2023 seniors Angelo Kortesis and Aundray Russell. <br>
 			The class of 2023 felt the nickname fit because "In <i>The Desert</i> we play hard, we play fair, and we make every pitch count. It is a tough place to be the visiting team."<br>
 			The Camels will open their 2024 campaign @ <i>The Desert</i> on 2/26 against Mount Airy HS @7PM
 			</p>
