--- a/news.html
+++ b/news.html
@@ -56,7 +56,7 @@
     <!--    <img src="./ahscamellogo.png" alt="Atkins Camel Logo">   -->
         <div class="content">
             <header>
-                <h1>Atkins HS Baseball News</h1>
+                <h1>Atkins HS Baseball</h1>
             </header>
             <nav>
 				<a href="./index.html">Home</a> |
@@ -72,11 +72,14 @@
 
 </style>
             </nav>
+            <header>
+                <h1><b>Camels Baseball Wire News</h1></b></h1>
+            </header>
             <main>
         <section id="section1">
-            <h1><b>Come back in February for the latest news from <i>The Desert</i>...</b></h1>
+            <h1><a href="./countdownBegins24.html">Countdown Begins: One Month Until Baseball Season</a></h1>
 			<p>
-				<img src="./ahscamellogo.png" alt="Atkins Camel Logo">
+				<img src="./coachmay.jpg" alt="Atkins Camel Logo">
 			</p>
             </main>
             <footer>
