--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <section id="section3">
             <h2>This Week's Games</h2>
             <p>
-			<s>2/26 vs Mount Airy HS</s> <b><i>(RESCHEDULED for 3/14)<b></i><br> <br>
-			<s>2/28 @ West Forsyth HS</s> <b><i>(RAINED OUT)<b></i> <br>		<a href="https://www.google.com/maps/place/1735+Lewisville+Clemmons+Rd,+Clemmons,+NC+27012/">Directions</a> <br>
+			<s>2/26 vs Mount Airy HS</s> <b><i>(RESCHEDULED for 3/14)</b></i><br> <br>
+			<s>2/28 @ West Forsyth HS</s> <b><i>(RAINED OUT)</b></i> <br>		<a href="https://www.google.com/maps/place/1735+Lewisville+Clemmons+Rd,+Clemmons,+NC+27012/">Directions</a> <br>
 			2/29 @ Northern Guilford HS <br>	 <a href="https://www.google.com/maps/place/7101+Spencer-Dixon+Rd,+Greensboro,+NC+27455/">Directions</a>
 			</p>
         </section>
